d.2015/12/25.17_02_32.12.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/29.11_10_59.65.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/04.14_09_52.69.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/04.20_29_08.86.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Book/DX/DX10.Luna/PartII/Common/d3dUtil.h
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/06.15_35_10.81.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/DX9/dx9_pipeline/DX9_Pipeline.png

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/06.17_07_18.44.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/DX9/dx9_pipeline/DirectX Rendering Pipeline.mht
	new file:   ZGame/HardWare/Graphics Card/CardCaps.xls
