@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-12-25 16:59:22 L.6  '25238 T1780136249.K ~1092+----+----+----+----+----+
+     Zndex_E : //z 2016-01-07 20:12:23 L.359'13657 T119833449 .K ~1098+----+----+----+----+----+
      TimeCnt : //z 2015-12-25 16:59:06 L.6  '25254 T1780136187.K ~69  +----+----+----+----+----+
      Reg.Cnt : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44  +----+----+----+----+----+
      #44  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44    V+.1104 L+.1169 
@@ -156,7 +156,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-12-25 16:59:22 L.6  '25238 T1780136249.K ~1136  R+.43   L+.1174 --+----+
+     Version : //z 2016-01-07 20:12:23 L.359'13657 T119833449 .K ~1142  R+.27   L+.749  --+----+
+     #60  V+ : //z 2016-01-07 20:11:46 L.359'13694 T119797581 .K ~1140  R+.27   L+.748  
      #59  V+ : //z 2015-12-22 17:50:39 L.9  '22161 T2867876694.K ~1121  R+.42   L+.1152 
      #58  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~1104  R+.44   L+.1170 V+.1104 
      #58  V+ : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1102  R+.43   L+.1159 
@@ -744,6 +745,9 @@ windows 下的shader开发环境有 rendermonkey
 建议先跟DirectX或OpenGL的Tutorial走一些例子，摸清楚Pipeline和Shader的工作原理。然后读一些图形学的书，推荐Real Time Rendering，记得出到第三版了。
 
 读了这些书以后大概就懂得如何使用着色器语言写出各种效果了，熟练之后就可以尝试接触一些比较高级的材料，比如最新的DirectX示例，CUDA，从头追看一遍GPU Gem， Shader X系列文章。GPU跟一般的计算机编程还不太一样，理论性很强，想要自己发挥，还是需要有一定基础的。
+
+2016-01-07 20:11 znote an introduction to hlsl。一步一步，易懂好理解。
+http://www.neatware.com/lbstudio/web/hlsl.html
 
 metaball的cocos2d-x实现：shader实现元球，片段着色器的高效渲染
 http://www.grapecookie.com/code/metaball-cocos2d-shader-cocos2dx/
