@@ -11542,3 +11542,14 @@ Changes to be committed:
 	new file:   ZGame/DX9/dx9_pipeline/DirectX Rendering Pipeline.mht
 	new file:   ZGame/HardWare/Graphics Card/CardCaps.xls
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2016/01/07.20_15_57.44.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
